# apollo-search

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md  conanfile.txt
src/: compile_commands.json  config.toml  log_test.cpp  service.cpp  service_test.cpp  service_test_2.cpp  service_test_3.cpp  startup.cpp  vector_space_preprocess.cpp
src/custom_crawler/: Makefile  README.md  a.out  crawler.cpp  crawler.h  fast_hash.cpp  fast_hash.h  fast_queue.cpp  fast_queue.h  main  main.cpp  message_queue.h  seeds  test.cpp
src/data_service/: apollo_service.h  data_service_client.h  document_service.cpp  document_service.h  mq_handler.h  ranker_client.h  ranker_service.cpp  ranker_service.h  ranker_service2.cpp  ranker_service2.h  service_utils.h  setup_data_service.h
src/data_service/databuf/: databuf.h
src/data_service/mq/: channel.cpp  channel.h  deferred_consumer.h  deferred_object.h  message.h  message_broker.cpp  message_broker.h  rr_broker.cpp  rr_broker.h
src/logging/: defer_logger.cpp  defer_logger.h  log_level.h  logger.h  stdout_logger.h
src/ranker/: README.md  a.out  callgrind.out.212  db_interface.h  desktop.ini  matrix.h  pageranker.cpp  pageranker.h  ranker_utils.h  test.cpp  tokenizer.h  utils.h
src/search_index/: index.cpp  index.h  supersmall.txt  test  testsmall.txt  timer.h
src/utils/: startup_config.h  utils.h  vector_space.h
tests/: config.yaml  input.txt  log_test.cpp  vector_space_test.cpp
tests/index_tests/: Makefile  main.cpp  test.cpp
tests/libcurl_test/: Makefile  test  test.cpp
tests/service_tests/: ranker_test.cpp
tests/test/: a.out  test.cpp
